# mullion

./: Cargo.toml  SETUP_INSTRUCTIONS
docs/: mullion-curve_map-prompts.md  mullion-manual.md  tiling-engine-roadmap.md
docs/superpowers/plans/: 2026-07-08-videoplayer.md
docs/superpowers/specs/: 2026-07-08-videoplayer-design.md
examples/: autolayout.rs  colorfield.rs  demo.rs  document.rs  gilbert_map.rs  graph.rs  records.rs  runaround.rs  runaround_multi.rs  showcase.rs  smoke.rs  spacefill.rs  strips.rs  teach.rs  text.rs  tv.rs  video.rs  videoplayer.rs  viewport.rs  wires.rs  zoom.rs
proptest-regressions/: text.txt  tree.txt
src/: border.rs  buffer.rs  capabilities.rs  colorfield.rs  curve_map.rs  diff.rs  docview.rs  edit.rs  field.rs  float.rs  form.rs  geometry.rs  graph.rs  input.rs  junction.rs  label.rs  layout.rs  lib.rs  outline.rs  panel.rs  record.rs  refine.rs  render.rs  route.rs  runaround.rs  socket.rs  spacefill.rs  style.rs  sugiyama.rs  table.rs  terminal.rs  text.rs  theme.rs  tree.rs  video.rs  vlist.rs  zoom.rs
src/backend/: crossterm_backend.rs  mod.rs  test_backend.rs
tests/: border.rs  integration.rs  layout_boundary.rs  layout_probe.rs  lifecycle.rs  probe.rs
