[package]
name = "mullion"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "A general-purpose terminal UI tiling engine"
license = "LGPL-3.0-or-later"

[lib]
name = "mullion"
path = "src/lib.rs"

[[example]]
name = "smoke"
path = "examples/smoke.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "showcase"
path = "examples/showcase.rs"

[dependencies]
bitflags = "2"
crossterm = "0.28"
unicode-segmentation = "1"
unicode-width = "0.2"

[dev-dependencies]
unicode-width = "0.2"
proptest = "1"
